# glengine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: arch-build.yml  linux-build.yml
assets/: house_scene.gobj
assets/blender/: camera.blend  cube.blend  cube.blend1  scene1.blend  scene1.blend1
assets/models/Cube/: cube.mtl
assets/models/Scene1/: scene1.mtl
assets/shaders/: default.frag  default.vert  dev.frag  dev.vert  directional_shadow_map.vert  skybox.frag  skybox.vert  textured.frag  textured.vert
assets/ui/layouts/: console.rcss  console.rml
cmake/: compiler_config.cmake  detect_platform.cmake
docs/: dependicies.md
engine/: CMakeLists.txt  basicgameobject.cpp  basicgameobject.hpp  engine.cpp  engine.hpp  entry.cpp  gameobject.hpp  logger.cpp  logger.hpp  resources_manager.cpp  resources_manager.hpp
engine/gui/: baseguielement.h  consoleguielement.cpp  consoleguielement.h
engine/nodes/: DirectionalLightNode.cpp  DirectionalLightNode.hpp  PointLightNode.cpp  PointLightNode.hpp  SpotLightNode.cpp  SpotLightNode.hpp
inc/: camera.hpp  define.hpp  engine.hpp  engine_props.hpp  game_object.hpp  main.hpp  mesh.hpp  model.hpp  shader.hpp  skybox.hpp  texture.hpp  vertex.hpp
inc/mdl/: MDLParser.h
launcher/: CMakeLists.txt  main.cpp
logger/: CMakeLists.txt  logger.cpp  logger.hpp
logger/fmt/: format.cpp  format.h  posix.cpp  posix.h
renderer/: CMakeLists.txt  DirectionalLight.cpp  DirectionalLight.hpp  Light.cpp  Light.hpp  PointLight.cpp  PointLight.hpp  ShadowMap.cpp  ShadowMap.hpp  SpotLight.cpp  SpotLight.hpp  camera.cpp  camera.hpp  directional_light.cpp  directional_light.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  renderable.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  skybox.cpp  skybox.hpp  texture.hpp  vertex.hpp
renderer/include/renderer/: camera.hpp  directional_light.hpp  renderer.hpp  skybox.hpp
rocketui/: CMakeLists.txt  RmlUi_Backend.h  RmlUi_Backend_SDL_GL3.cpp  RmlUi_Platform_SDL.cpp  RmlUi_Platform_SDL.h  RmlUi_Renderer_GL3.cpp  RmlUi_Renderer_GL3.h
src/: camera.cpp  engine.cpp  engine.hpp  game_object.cpp  main.cpp  main.hpp  mesh.cpp  model.cpp  shader.cpp  skybox.cpp
src/gui/: consoleguielement.cpp
src/mdl/: MDLParser.cpp  VTXParser.cpp  VVDParser.cpp
